--- a/index.html
+++ b/index.html
@@ -3,223 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ageflix - Home</title>
-
-  <!-- خط جميل مثل نيتفليكس -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+  <title>Ageflix - Netflix Style</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Roboto', sans-serif;
-    }
-
-    body {
-      background-color: #000;
-      color: #fff;
-    }
+    * { box-sizing: border-box; margin:0; padding:0; font-family: 'Netflix Sans', Arial, sans-serif; }
+    body { background-color: #141414; color: #fff; }
 
     /* Navbar */
-    nav.navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #000;
-      color: #fff;
-      padding: 15px 25px;
-      border-bottom: 2px solid #e50914;
-      flex-wrap: wrap;
+    nav.navbar{
+      display:flex; align-items:center; justify-content:space-between; padding:15px 30px; background:#141414; position:sticky; top:0; z-index:999;
     }
-    .navbar .logo {
-      font-size: 28px;
-      font-weight: 700;
-      color: #e50914;
-      letter-spacing: 1px;
-    }
-    .navbar ul {
-      display: flex;
-      list-style: none;
-      justify-content: center;
-      flex: 2;
-    }
-    .navbar ul li {
-      margin: 0 15px;
-    }
-    .navbar ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-    .navbar ul li a:hover {
-      color: #e50914;
-    }
-    .navbar .icon {
-      flex: 1;
-      text-align: right;
-      font-size: 22px;
-    }
+    .logo{ font-size:32px; font-weight:bold; color:#e50914; }
+    .navbar ul{ display:flex; list-style:none; }
+    .navbar ul li{ margin-left:25px; }
+    .navbar ul li a{ color:#fff; text-decoration:none; font-weight:bold; transition:0.3s; }
+    .navbar ul li a:hover{ color:#e50914; }
 
     /* Marquee */
-    .marquee-container {
-      width: 100%;
-      overflow: hidden;
-      background: #111;
-      color: #fff;
-      font-size: 20px;
-      padding: 10px 0;
-      position: relative;
-      letter-spacing: 0.5px;
+    .marquee-container{
+      width:100%; overflow:hidden; background:#141414; color:#fff; font-size:20px; padding:10px 0;
     }
-    .marquee {
-      display: inline-block;
-      white-space: nowrap;
-      animation: marquee 15s linear infinite;
-    }
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
+    .marquee{ display:inline-block; white-space:nowrap; animation:marquee 15s linear infinite; }
+    @keyframes marquee{ 0%{transform:translateX(100%);} 100%{transform:translateX(-100%);} }
 
     /* Banner Slider */
-    .banner-slider {
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height: 420px;
-      margin-bottom: 30px;
-      background: #000;
-    }
-    .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
-    .slide.active {
-      opacity: 1;
-      z-index: 2;
-    }
-    .slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: brightness(0.7);
-    }
-    .prev, .next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.6);
-      color: #fff;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
-      font-size: 28px;
-      z-index: 3;
-      transition: 0.3s;
-    }
-    .prev:hover, .next:hover {
-      background-color: rgba(229,9,20,0.8);
-    }
-    .prev { left: 15px; }
-    .next { right: 15px; }
-
-    .dots {
-      position: absolute;
-      bottom: 15px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 8px;
-      z-index: 3;
-    }
-    .dot {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background-color: rgba(255,255,255,0.5);
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .dot.active, .dot:hover {
-      background-color: #e50914;
-    }
+    .banner-slider{ position:relative; overflow:hidden; height:450px; margin-bottom:30px; }
+    .slide{ position:absolute; width:100%; height:100%; opacity:0; transition:opacity 1s ease-in-out; }
+    .slide.active{ opacity:1; z-index:2; }
+    .slide img{ width:100%; height:100%; object-fit:cover; border-radius:4px; }
+    .prev,.next{ position:absolute; top:50%; transform:translateY(-50%); background-color: rgba(0,0,0,0.4); color:#fff; border:none; padding:12px; cursor:pointer; font-size:28px; border-radius:50%; }
+    .prev{ left:20px; } .next{ right:20px; }
+    .dots{ position:absolute; bottom:15px; left:50%; transform:translateX(-50%); display:flex; gap:10px; }
+    .dot{ width:14px; height:14px; border-radius:50%; background:rgba(255,255,255,0.5); cursor:pointer; }
+    .dot.active{ background:#e50914; }
 
     /* Hero Section */
-    section.hero {
-      text-align: center;
-      padding: 50px 20px;
-    }
-    section.hero h1 {
-      font-size: 42px;
-      margin-bottom: 15px;
-      color: #fff;
-      text-shadow: 0 0 20px rgba(255,255,255,0.2);
-    }
-    section.hero p {
-      font-size: 20px;
-      color: #ccc;
-      margin-bottom: 25px;
-    }
+    section.hero{ text-align:center; padding:20px; }
+    section.hero h1{ font-size:36px; margin-bottom:15px; color:#e50914; }
+    section.hero p{ font-size:22px; margin-bottom:25px; }
+    button#startBtn{ padding:15px 50px; font-size:20px; cursor:pointer; background:#e50914; border:none; border-radius:5px; transition:0.3s; }
+    button#startBtn:hover{ background:#b00610; }
 
-    /* Start Button */
-    button#startBtn {
-      padding: 14px 40px;
-      font-size: 20px;
-      font-weight: bold;
-      background-color: #e50914;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.3s;
-      letter-spacing: 1px;
-      box-shadow: 0 0 20px rgba(229,9,20,0.6);
-    }
-    button#startBtn:hover {
-      background-color: #b00610;
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(229,9,20,0.8);
-    }
+    #webcam-container,#label-container{ margin:15px auto; }
 
-    #webcam-container, #label-container {
-      margin: 15px auto;
-    }
+    /* Static Movie Posters */
+    .static-images{ display:flex; overflow-x:auto; gap:15px; padding:15px 0 30px 0; }
+    .static-images img{ width:220px; height:330px; object-fit:cover; border-radius:5px; flex-shrink:0; }
 
-    /* Static images */
-    .static-images {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-bottom: 40px;
-    }
-    .static-images img {
-      width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(229,9,20,0.3);
-      transition: 0.3s;
-    }
-    .static-images img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(229,9,20,0.6);
-    }
+    /* Scrollbar hidden */
+    .static-images::-webkit-scrollbar{ display:none; }
 
     /* Responsive */
     @media(max-width:768px){
-      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
-      section.hero h1 { font-size: 28px; }
-      section.hero p { font-size: 16px; }
-      button#startBtn { font-size: 16px; }
-      .slide-text { font-size: 18px; }
-      .marquee-container { font-size: 16px; }
-      .static-images img { width: 90%; height: auto; }
+      section.hero h1{ font-size:28px; }
+      section.hero p{ font-size:18px; }
+      button#startBtn{ font-size:18px; }
+      .static-images img{ width:150px; height:230px; }
+      .marquee-container{ font-size:18px; }
     }
   </style>
 </head>
@@ -229,43 +68,144 @@
   <nav class="navbar">
     <div class="logo">Ageflix</div>
     <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="movies.html">Movies</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Movies</a></li>
+      <li><a href="#">Kids</a></li>
+      <li><a href="#">Adults</a></li>
     </ul>
-    <div class="icon">🎬</div>
   </nav>
 
   <!-- Marquee -->
-  <div class="marquee-container">
-    <div class="marquee" id="marqueeText"></div>
-  </div>
+  <div class="marquee-container"><div class="marquee" id="marqueeText">Loading messages...</div></div>
 
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
-    <div class="slide active">
-      <img src="1.jpg" alt="Banner 1">
-    </div>
-    <div class="slide">
-      <img src="2.jpg" alt="Banner 2">
-    </div>
+    <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
+    <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
+    <div class="slide"><img src="3.jpg" alt="Banner 3"></div>
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
     <div class="dots"></div>
   </section>
 
-  <!-- Hero / Webcam -->
+  <!-- Hero -->
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
-    <p>Discover movies according to your age group!</p>
-
+    <p>Discover movies suitable for your age group!</p>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
-
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
-  <!-- Scripts -->
-  <!-- نفس سكريبتاتك تبقى كما هي -->
+  <!-- Movie Posters -->
+  <div class="static-images">
+    <img src="m1.jpg" alt="Movie 1">
+    <img src="m2.jpg" alt="Movie 2">
+    <img src="m3.jpg" alt="Movie 3">
+    <img src="m4.jpg" alt="Movie 4">
+    <img src="m5.jpg" alt="Movie 5">
+  </div>
+
+  <!-- TensorFlow & Teachable Machine -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
+
+  <script>
+    // Marquee
+    const marqueeTextElem = document.getElementById('marqueeText');
+    const marqueeMessages = [
+      "Ageflix recommends movies based on your age",
+      "Find the perfect movie for kids, adults, and seniors",
+      "Your personalized movie guide!",
+      "Discover films suitable for your age",
+      "Enjoy movies safely with Ageflix"
+    ];
+    let marqueeIndex = 0;
+    function updateMarquee(){
+      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
+      marqueeIndex=(marqueeIndex+1)%marqueeMessages.length;
+    }
+    setInterval(updateMarquee,5000);
+    updateMarquee();
+
+    // Slider
+    const slides=document.querySelectorAll('.slide');
+    const prev=document.querySelector('.prev');
+    const nextBtn=document.querySelector('.next');
+    const dotsContainer=document.querySelector('.dots');
+    let slideIndex=0;
+
+    function showSlide(index){
+      if(index<0) slideIndex=slides.length-1;
+      else if(index>=slides.length) slideIndex=0;
+      else slideIndex=index;
+      slides.forEach((s,i)=>{ s.classList.remove('active'); if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active'); });
+      slides[slideIndex].classList.add('active');
+      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+    }
+
+    prev.addEventListener('click',()=>showSlide(slideIndex-1));
+    nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
+
+    slides.forEach((_,i)=>{
+      const dot=document.createElement('span');
+      dot.classList.add('dot');
+      if(i===0) dot.classList.add('active');
+      dot.addEventListener('click',()=>showSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+
+    // Age detection
+    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+    let model, webcam, maxPredictions, detected=false;
+
+    async function init(){
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
+      webcam = new tmImage.Webcam(400,300,true);
+      await webcam.setup();
+      await webcam.play();
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+      window.requestAnimationFrame(loop);
+    }
+
+    async function loop(){
+      webcam.update();
+      await predict();
+      if(!detected) window.requestAnimationFrame(loop);
+    }
+
+    async function predict(){
+      const prediction = await model.predict(webcam.canvas);
+      let labelContainer = document.getElementById("label-container");
+      labelContainer.innerHTML="";
+      prediction.forEach(p=>{
+        labelContainer.innerHTML+=`<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
+      });
+      const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
+      if(best.probability>0.85 && !detected){
+        detected=true;
+        showPopup(best.className);
+      }
+    }
+
+    function showPopup(userGroup){
+      const popup=document.createElement("div");
+      popup.id="popup";
+      popup.innerHTML=`<div class="popup-content" style="background:#141414; border:2px solid #e50914; padding:30px 50px; border-radius:10px; text-align:center;">
+        <h2>You are <span style="color:#e50914;">${userGroup}</span></h2>
+        <button id="nextBtn">Next ➜</button>
+      </div>`;
+      document.body.appendChild(popup);
+      document.getElementById("nextBtn").addEventListener("click",()=>{
+        popup.remove();
+        alert("Redirecting to your age-appropriate page...");
+      });
+    }
+
+    document.getElementById("startBtn").addEventListener("click",init);
+  </script>
 </body>
 </html>
