--- a/kid.html
+++ b/kid.html
@@ -1,38 +1,170 @@
-<!-- ضع هذا في نفس مكان الكود السابق ضمن <body> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ageflix - Home</title>
+  <style>
+    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
+    body { background: #000; color: #fff; }
+
+    /* Navbar */
+    nav.navbar { display: flex; align-items: center; justify-content: space-between; background-color: #111; padding: 10px 20px; flex-wrap: wrap; }
+    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: #e50914; }
+    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
+    .navbar ul li { margin: 0 15px; }
+    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+    .navbar .icon { flex: 1; text-align: right; }
+
+    /* Marquee */
+    .marquee-container { width: 100%; overflow: hidden; background: #222; color: #fff; font-size: 22px; padding: 10px 0; position: relative; }
+    .marquee { display: inline-block; white-space: nowrap; animation: marquee 15s linear infinite; }
+    @keyframes marquee { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
+
+    /* Banner Slider */
+    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
+    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
+    .slide.active { opacity: 1; z-index: 2; }
+    .slide img { width: 100%; height: 100%; object-fit: cover; }
+
+    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
+    .prev { left: 10px; }
+    .next { right: 10px; }
+
+    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
+    .dot.active { background-color: #e50914; }
+
+    /* Hero */
+    section.hero { text-align: center; padding: 20px; }
+    section.hero h1 { font-size: 32px; margin-bottom: 10px; color:#e50914; }
+    section.hero p { font-size: 20px; margin-bottom: 20px; }
+    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; background:#e50914; border:none; border-radius:5px; color:white; transition:0.3s; }
+    button#startBtn:hover{background:#b00610;}
+    #webcam-container, #label-container { margin: 15px auto; }
+
+    /* Popup & Loading */
+    #popup, #loading-screen { position: fixed; top:0; left:0; width:100%; height:100%; display:flex; justify-content:center; align-items:center; z-index:9999; background: rgba(0,0,0,0.85); }
+    .popup-content, .loading-content { background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px; text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6); }
+    .popup-content h2, .loading-content h2 { font-size:28px; margin-bottom:20px; color:#e50914; }
+    #nextBtn, #startBtn { cursor:pointer; }
+    .progress-bar { width:100%; height:20px; background:#333; border-radius:10px; overflow:hidden; margin:20px 0; }
+    .progress-fill { width:0%; height:100%; background:#e50914; transition: width 0.5s; }
+    .shimmer { animation: shimmer 1.5s infinite; background: linear-gradient(to right,#fff,#e50914,#fff); -webkit-background-clip: text; color: transparent; }
+    @keyframes shimmer { 0%{background-position:-300px 0}100%{background-position:300px 0} }
+    @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
+
+    /* Responsive */
+    @media(max-width:768px){
+      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
+      section.hero h1 { font-size: 24px; }
+      section.hero p { font-size: 16px; }
+      button#startBtn { font-size: 16px; }
+      .marquee-container { font-size: 18px; }
+      .slide img { height: auto; }
+    }
+  </style>
+</head>
+<body>
+
+<nav class="navbar">
+  <div class="logo">Ageflix</div>
+  <ul>
+    <li><a href="about.html">About</a></li>
+    <li><a href="movies.html">Movies</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <div class="icon">🎬</div>
+</nav>
+
+<div class="marquee-container"><div class="marquee" id="marqueeText"></div></div>
+
+<section class="banner-slider" id="bannerSlider">
+  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
+  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+  <div class="dots"></div>
+</section>
+
+<section class="hero">
+  <h1>Welcome to Ageflix</h1>
+  <p>Discover movies according to your age group!</p>
+  <div id="webcam-container"></div>
+  <div id="label-container"></div>
+  <button id="startBtn">Start Camera & Detect Age</button>
+</section>
+
 <audio id="scan-sound" loop>
   <source src="https://www.soundjay.com/misc/sounds/beep-07.mp3" type="audio/mpeg">
 </audio>
 
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 <script>
-document.getElementById("startBtn").addEventListener("click", async ()=>{
-  const scanSound = document.getElementById("scan-sound");
-  scanSound.play(); // يبدأ الصوت عند فتح البوب أب
+const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+let model, webcam, maxPredictions;
 
-  const popup = document.createElement("div");
+const marqueeTextElem = document.getElementById('marqueeText');
+const marqueeMessages = [
+  "Ageflix recommends movies based on your age",
+  "Find the perfect movie for kids, adults, and seniors",
+  "Your personalized movie guide!",
+  "Discover films suitable for your age",
+  "Enjoy movies safely with Ageflix"
+];
+let marqueeIndex = 0;
+function updateMarquee(){ marqueeTextElem.innerText = marqueeMessages[marqueeIndex]; marqueeIndex=(marqueeIndex+1)%marqueeMessages.length; }
+setInterval(updateMarquee,5000); updateMarquee();
+
+// Slider
+const slides=document.querySelectorAll('.slide');
+const prev=document.querySelector('.prev');
+const nextBtn=document.querySelector('.next');
+const dotsContainer=document.querySelector('.dots');
+let slideIndex=0;
+function showSlide(index){
+  if(index<0) slideIndex=slides.length-1;
+  else if(index>=slides.length) slideIndex=0;
+  else slideIndex=index;
+  slides.forEach((s,i)=>{s.classList.remove('active'); if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');});
+  slides[slideIndex].classList.add('active');
+  if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+}
+prev.addEventListener('click',()=>showSlide(slideIndex-1));
+nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
+slides.forEach((_,i)=>{const dot=document.createElement('span'); dot.classList.add('dot'); if(i===0) dot.classList.add('active'); dot.addEventListener('click',()=>showSlide(i)); dotsContainer.appendChild(dot);});
+
+// Age Detection + Popup
+document.getElementById("startBtn").addEventListener("click", async ()=>{
+  const scanSound=document.getElementById("scan-sound");
+  scanSound.play();
+
+  const popup=document.createElement("div");
   popup.id="popup";
   popup.innerHTML=`<div class="popup-content">
     <h2 id="loading-title" class="shimmer">Detecting your age...</h2>
     <div class="progress-bar"><div class="progress-fill"></div></div>
-    <div class="dots"><span></span><span></span><span></span></div>
     <p id="loading-text">Analyzing face</p>
   </div>`;
   document.body.appendChild(popup);
 
-  const modelURL=URL+"model.json";
-  const metadataURL=URL+"metadata.json";
+  const modelURL=URL+"model.json"; const metadataURL=URL+"metadata.json";
   model=await tmImage.load(modelURL,metadataURL);
   maxPredictions=model.getTotalClasses();
   webcam=new tmImage.Webcam(400,300,true);
-  await webcam.setup();
-  await webcam.play();
+  await webcam.setup(); await webcam.play();
   document.getElementById("webcam-container").appendChild(webcam.canvas);
 
-  const startTime=Date.now();
-  let detectedGroup=null;
-  const messages=["Detecting age...","Analyzing face...","Almost done..."];
+  const startTime=Date.now(); let detectedGroup=null;
   const loadingText=document.getElementById("loading-text");
-  let msgIndex=0;
-  const msgInterval = setInterval(()=>{loadingText.innerText=messages[msgIndex % messages.length];msgIndex++;},15000);
+  const fillBar=document.querySelector(".progress-fill");
+  const interval=setInterval(()=>{
+    const elapsed=(Date.now()-startTime)/45000*100;
+    fillBar.style.width=elapsed+"%";
+    const msgs=["Detecting age...","Analyzing face...","Almost done..."];
+    loadingText.innerText=msgs[Math.floor(elapsed/33)] || "Almost done...";
+  },500);
 
   async function loop(){
     webcam.update();
@@ -40,12 +172,26 @@ document.getElementById("startBtn").addEventListener("click", async ()=>{
     const best=prediction.reduce((a,b)=> a.probability>b.probability?a:b);
     if(best.probability>0.85 || (Date.now()-startTime)>=45000){
       detectedGroup=best.className;
-      popup.remove();
-      clearInterval(msgInterval);
-      scanSound.pause(); // يوقف الصوت عند ظهور النتيجة
+      popup.remove(); clearInterval(interval); scanSound.pause();
       showResultPopup(detectedGroup);
     } else requestAnimationFrame(loop);
   }
   loop();
 });
+
+function showResultPopup(userGroup){
+  const resultPopup=document.createElement("div");
+  resultPopup.id="popup";
+  resultPopup.innerHTML=`<div class="popup-content">
+    <h2>You are <span>${userGroup}</span></h2>
+    <button id="nextBtn">Next ➜</button>
+  </div>`;
+  document.body.appendChild(resultPopup);
+  document.getElementById("nextBtn").addEventListener("click",()=>{
+    resultPopup.remove();
+    window.location.href=(userGroup.toLowerCase()==="kids"?"kids.html":userGroup.toLowerCase()==="adult"?"adult.html":userGroup.toLowerCase()==="senior"?"senior.html":"index.html");
+  });
+}
 </script>
+</body>
+</html>
